--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                     </div>
                     <div class="card--options">
                         <div class="options">
-                            ...
+                            <img src="https://th.bing.com/th/id/R.63705b1539157721408ba29b4c9794f9?rik=7bsZLUE4LLVXCg&riu=http%3a%2f%2fwww.espacioculinario.cl%2fwp-content%2fuploads%2f2016%2f05%2fPUNTOS-SUSPENSIVOS.png&ehk=T1XCIvBuQWgd9auYosxz0xSfNpQXIEFb9evEooaqm1Y%3d&risl=&pid=ImgRaw&r=0" alt="">
                         </div>
                         <div class="dont-see">
-                            x
+                            <img src="https://th.bing.com/th/id/R.ee28702d77af1cf2d264cf15f27b3d90?rik=7cAIE9wrwiT%2bVA&riu=http%3a%2f%2fwww.newdesignfile.com%2fpostpic%2f2015%2f05%2fblack-letter-x_68985.png&ehk=ZfAjqXlELy4eWE%2f3hlFx8jsHBVSCwGWxxHaIuL833HU%3d&risl=&pid=ImgRaw&r=0" alt="">
                         </div>
                     </div>
                 </div>
